# PulsarTimingAnalysis

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Fermi_tutorial.ipynb  LICENSE.md  MANIFEST.in  README.md  Tutorial_notebook.ipynb  config.yaml  environment.yml  genindex.html  index.html  installation.html  objects.inv  penergy_analysis.py  ptime_analysis.py  pulsar_analysis.py  pulsarphase_cal.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/: release-drafter.yml
.github/workflows/: ci.yml  release_drafter.yml  run_test.yml  run_test_linux.yml  run_test_macos.yml
PulsarPhaseogram/: Lightcurve.py  PFitting.py  PTimeEvolution.py  PeriodicityTest.py  PhaseRegions.py  PulsarPhaseArray.py  PulsarPhases.py  Pulsarpeak.py  Tutorial_PulsarPhaseogram.ipynb  __init__.py  filter_object.py  lightcurve.py  models.py  pfitting.py  phase_regions.py  read_events.py
PulsarPhaseogram/Tutorial/: Tutorial_PulsarPhaseogram.ipynb
PulsarPhaseogram/cphase/: fermi_pphase.py  pphase.py  pulsarphase_cal.py
PulsarTimingAnalysis/: filter_object.py  lightcurve.py  models.py  penergy_analysis.py  periodicity_test.py  pfitting.py  phase_regions.py  phasebinning.py  ptime_analysis.py  pulsar_analysis.py  read_events.py
PulsarTimingAnalysis/Tutorial/: Tutorial_PulsarPhaseogram.ipynb
PulsarTimingAnalysis/cphase/: __init__.py  add_pulsarphase.py
Tutorial/: Fermi_tutorial.ipynb  LST_Tutorial.ipynb
_downloads/9dc897b64b82ae92c502938a732d9873/: Tutorial_notebook.ipynb
_sources/: sg_execution_times.rst.txt
_sources/api/: ptiming_ana.cphase.DL2_calphase.rst.txt  ptiming_ana.cphase.DL3_calphase.rst.txt  ptiming_ana.cphase.add_mjd.rst.txt  ptiming_ana.cphase.dl2time_totim.rst.txt  ptiming_ana.cphase.fermi_calphase.rst.txt  ptiming_ana.cphase.merge_dl2_pulsar.rst.txt  ptiming_ana.cphase.model_fromephem.rst.txt  ptiming_ana.phaseogram.FilterPulsarAna.rst.txt  ptiming_ana.phaseogram.Lightcurve.rst.txt  ptiming_ana.phaseogram.PEnergyAnalysis.rst.txt  ptiming_ana.phaseogram.PeakFitting.rst.txt  ptiming_ana.phaseogram.PeriodicityTest.rst.txt  ptiming_ana.phaseogram.PhaseBinning.rst.txt  (+19 more)
_sources/api-reference/: cphase.rst.txt  spectral.rst.txt
_static/: documentation_options.js
api/: ptiming_ana.cphase.DL2_calphase.html  ptiming_ana.cphase.DL3_calphase.html  ptiming_ana.cphase.add_mjd.html  ptiming_ana.cphase.dl2time_totim.html  ptiming_ana.cphase.fermi_calphase.html  ptiming_ana.cphase.merge_dl2_pulsar.html  ptiming_ana.cphase.model_fromephem.html  ptiming_ana.phaseogram.FilterPulsarAna.html  ptiming_ana.phaseogram.Lightcurve.html  ptiming_ana.phaseogram.PEnergyAnalysis.html  ptiming_ana.phaseogram.PeakFitting.html  ptiming_ana.phaseogram.PeriodicityTest.html  ptiming_ana.phaseogram.PhaseBinning.html  ptiming_ana.phaseogram.PhaseRegions.html  ptiming_ana.phaseogram.PulsarAnalysis.html  ptiming_ana.phaseogram.PulsarPeak.html  ptiming_ana.phaseogram.PulsarTimeAnalysis.html  ptiming_ana.phaseogram.ReadFermiFile.html  ptiming_ana.phaseogram.ReadLSTFile.html  ptiming_ana.phaseogram.ReadList.html  ptiming_ana.spectral.SpectralConfigSetting.html  ptiming_ana.spectral.SpectralPulsarAnalysis.html  ptiming_ana.spectral.compute_spectral_points.html  ptiming_ana.spectral.do_fitting.html  ptiming_ana.spectral.execute_makers.html  ptiming_ana.spectral.get_kwargs_line.html  ptiming_ana.spectral.get_kwargs_points.html  ptiming_ana.spectral.get_kwargs_region.html  ptiming_ana.spectral.read_DL3_files.html  ptiming_ana.spectral.set_geometry.html  ptiming_ana.spectral.set_makers.html  ptiming_ana.spectral.set_model_to_fit.html
api-reference/: cphase.html  index.html  phaseogram.html  spectral.html
auto_examples/: Tutorial_notebook.html  index.html  sg_execution_times.html
cphase/: .pulsarphase_cal.py.swp  add_fermipulsarphase.py  add_phase_interp.py  add_pulsarphase.py  pulsarphase_cal.py  tm.par  utils.py
docs/: Makefile  conf.py  index.rst  installation.rst
examples/: index.html
ptiming_ana/: __init__.py  _version.py  penergy_analysis.py  pulsar_analysis.py  read_events.py  version.py
tests/: test_tutorial.py
tutorial/: GALLERY_HEADER.rst  Tutorial_notebook.ipynb  Tutorial_notebook.py
(+59 files in other folders)
