[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "ptiming_ana/_version.py"

[project]
name = "PtimingAna"
version = "0.1.0"
description = file: README.md
authors = [{name = "ptiming_ana developers", email = "alvmas@ucm.es"}]
dependencies = ["setuptools", "wheel"]

[project.optional-dependencies]
dev = ['pre-commit~=3.8.0']

[tool.ruff]
exclude = ["docs", "dev"]
# Like black
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]
extend-ignore = ["E203","E712"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"