[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ptiming_ana"
description = "Periodicity analysis of gamma-ray emission from pulsars"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Ãlvaro Mas Aguilar", email = "alvmas@ucm.es"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 3 - Alpha",
]

requires-python = ">=3.9"
dependencies = [
    "astropy~=5.0",
    "lstchain==0.10.6",
    "gammapy==1.1",
    "h5py",
    "matplotlib~=3.7",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "tables",
    "pint-pulsar<=0.9.7",
    "more-itertools==10.4.0",
]

# Dynamic versioning through setuptools_scm
dynamic = ["version"]

[project.urls]
repository = "https://github.com/cta-observatory/PulsarTimingAnalysis"
documentation = "https://github.com/cta-observatory/PulsarTimingAnalysis"

# Command-line scripts mapping the name of the tool to the import and function to execute
[project.scripts]
merge_pulsar_files = "ptiming_ana.cphase.merge_pulsar_files:main"
add_DL3_phase_table = "ptiming_ana.cphase.add_DL3_phase_table:main"
add_DL2_phase_table = "ptiming_ana.cphase.add_DL2_phase_table:main"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ptiming_ana._dev_version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
doc = [
  "sphinx",
  "numpydoc",
]
dev = [
  "setuptools_scm",
]

# Self-references to simplify all, needs to match project.name defined above
all = [
  "ptiming_ana[test,doc,dev]",
]

[tool.setuptools_scm]
write_to = "src/ptiming_ana/_version.py"

[tool.coverage.run]
include = ["src/*"]
relative_files = true
omit = ["src/ptiming_ana/_version.py"]

[tool.ruff]
exclude = ["docs", "dev"]
# Like black
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"